Fix bug with invisible button

--- a/frontend/style/dashboard.css
+++ b/frontend/style/dashboard.css
@@ -115,6 +115,7 @@ a {
 	opacity: 0;
 	width: 0;
 	height: 0;
+	pointer-events: none;
 }
 
 .rulesets ul #no-rulesets h2 {
